--- a/src/index.css
+++ b/src/index.css
@@ -8,23 +8,34 @@ body{
   padding: 0;
 }
 
-.square{
-  width: 35px;
-  height: 35px;
-  border: 1px solid black;
-  background-color: white;
-  font-size: 1.2rem;
-  font-weight: bold;
-  cursor: pointer;
+ul{
+  padding-inline-start: 20px;
 }
 
+.square{
+  background-color: #fff;
+  border: 1px solid #999;
+  font-size: 1rem;
+  font-weight: bold;
+  /* line-height: 34px; */
+  height: 34px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+  cursor: pointer;
+  margin: 0;
+}
 .board{
   display: flex;
   flex-wrap: wrap;
-  width: calc(35px * 3);
-  height: calc(35px * 3);
+  width: calc(34px * 3);
+  height: calc(34px * 3);
 }
 
 .status{
   margin-bottom: 10px;
+}
+.game{
+  display: flex;
+  flex-direction: row;
 }
