--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body{
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-ul{
-  padding-inline-start: 20px;
-}
-
-.square{
-  background-color: #fff;
-  border: 1px solid #999;
-  font-size: 1rem;
-  font-weight: bold;
-  /* line-height: 34px; */
-  height: 34px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
-  cursor: pointer;
-  margin: 0;
-}
-.board{
-  display: flex;
-  flex-wrap: wrap;
-  width: calc(34px * 3);
-  height: calc(34px * 3);
-}
-
-.status{
-  margin-bottom: 10px;
-}
-.game{
-  display: flex;
-  flex-direction: row;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
