--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navbar-fixed {
+  @apply fixed z-[999] bg-white bg-opacity-80 backdrop-blur shadow-inner;
+}
